fail x2 to save user